# guake-svn-graft

./: ChangeLog  README  TODO  autogen.sh  configure.ac  po-extract  setup.py
data/: Makefile.am  about.glade  guake.glade  guake.schemas  prefs.glade
po/: ChangeLog  pt_BR.po
po/pt_BR/LC_MESSAGES/: pt_BR.po
src/: Makefile.am  common.py  dbusiface.py  dialogs.py  guake  guake.in  guake.py  guakeApplet.py  guake_globals.py.in  main.py  simplegladeapp.py  statusicon.py  utils.py
src/globalhotkeys/: globalhotkeys.c  keybinder.c  testbinding.c
