uidir = $(datadir)/guake
ui_DATA = \
	about.glade \
	guake.glade \
	prefs.glade

pixmapsdir = $(datadir)/pixmaps/guake
pixmaps_DATA = \
	close.svg \
	guake.svg \
	left_in.svg \
	littleguakelogo.svg \
	statusicon_out.png \
	tabup.svg \
	down_in.svg \
	guake.png \
	guakeabt.png \
	left_normal.svg \
	new_guakelogo.png \
	right_in.svg \
	statusicon_over.png \
	up_in.svg \
	addTerm.svg \
	down_normal.svg \
	guakelogo.svg \
	littleguakelogo.png \
	no-pil.png \
	right_normal.svg \
	tabdown.svg \
	up_normal.svg

EXTRA_DIST = $(ui_DATA) \
			 $(pixmaps_DATA)		
